Change a dataset structure to be service object based.

--- a/ioos_catalog/static/css/ism-style.css
+++ b/ioos_catalog/static/css/ism-style.css
@@ -84,3 +84,10 @@ a {
   position: absolute;
   width: 40px;
 }
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+  background-color: #0088cc;
+  color: #fff;
+}
