--- a/ioos_catalog/templates/datasets.html
+++ b/ioos_catalog/templates/datasets.html
@@ -11,7 +11,7 @@
             <select name="filter-type" class="form-control">
                 <option value="null">-</option>
                 {%- for a in assettypes|sort %}
-                <option>{{ a._id }}</option>
+                <option>{{ a }}</option>
                 {%- endfor %}
             </select>
         </div>
@@ -25,16 +25,14 @@
     <table class="table table-striped table-bordered table-condensed" style="font-size: 11px;">
         <thead>
             <tr>
-                <th>name</th>
-                <th>description</th>
+                <th>uid</th>
                 <th>updated (utc)</th>
             </tr>
         </thead>
         <tbody>
         {%- for d in datasets %}
             <tr>
-                <td><a href="{{ url_for('show_dataset', dataset_id=d._id) }}">{{ d.name }}</a></td>
-                <td>{{ d.description }}</td>
+                <td><a href="{{ url_for('show_dataset', dataset_id=d._id) }}">{{ d.uid }}</a></td>
                 <td>{{ d.updated | datetimeformat }}</td>
             </tr>
         {%- endfor %}
