Add Datasets to the index page filtering. Improve Dataset filtering.
Adds a 'data_provider' key to a Dataset object that is cached from the
service it was harvested from.

--- a/ioos_catalog/static/css/ism-style.css
+++ b/ioos_catalog/static/css/ism-style.css
@@ -35,6 +35,10 @@ svg .dataset path {
 
 /* override some bootstrap colors/styles */
 
+.dataset-type-btn, .service-type-btn {
+  margin-bottom: 10px;
+}
+
 .btn-success {
   background-color: #FFA855;
   border-color: #EF7825;
