Change label of coverage map to "Coverage"

--- a/ioos_catalog/templates/show_dataset.html
+++ b/ioos_catalog/templates/show_dataset.html
@@ -31,7 +31,7 @@
           <dd>{{ s.asset_type }}</dd>
           <dt>Last updated</dt>
           <dd>{{ s.updated | datetimeformat }}</dd>
-          <dt>GeoJSON</dt>
+          <dt>Coverage</dt>
           <dd>
             <div id="map_{{s.service_id}}" class="map">
             </div>
