--- a/ioos_catalog/templates/show_dataset.html
+++ b/ioos_catalog/templates/show_dataset.html
@@ -3,7 +3,7 @@
 
 {% block jumbo %}
 
-<h3><a href="{{ url_for('show_dataset', dataset_id=dataset._id) }}">{{ dataset.uid }}</a><br/><small><a href="/">IOOS Catalog &#187; <a href="{{ url_for('datasets') }}">Datasets</a></small></h3>
+<h3><a href="{{ url_for('show_dataset', dataset_id=dataset._id) }}">{{ dataset.uid | truncate(70, true) }}</a><br/><small><a href="/">IOOS Catalog &#187; <a href="{{ url_for('datasets') }}">Datasets</a></small></h3>
 
 {% endblock %}
 
