--- a/ioos_catalog/templates/show_service.html
+++ b/ioos_catalog/templates/show_service.html
@@ -80,6 +80,37 @@
     </dl>
   </div>
 
+  <h4>Metamap</h4>
+  <div class="row">
+    <div class="col-lg-8">
+      {%- if metadata %}
+      <dl class="dl-horizontal">
+        {%- for k,v in metadata.metamap|dictsort %}
+        <dt>{{ k }}</dt>
+        <dd>{{ v }}</dd>
+        {%- endfor %}
+      </dl>
+      {%- else %}
+      <p>None collected!</p>
+      {%- endif %}
+    </div>
+    <div class="col-lg-4">
+      {%- if metadata %}
+      <div class="progress progress-striped">
+        <div class="progress-bar progress-bar-success" style="width: {{ metadata.cc_score.pct * 100}}%">
+          <span class="sr-only">{{metadata.cc_score.pct * 100}}%</span>
+        </div>
+      </div>
+      <dl class="dl-horizontal">
+        <dt>Compliance Score</dt>
+        <dd>{{metadata.cc_score.score }}<small>/{{metadata.cc_score.max_score}}</small> ({{ "%.1f"|format(metadata.cc_score.pct * 100) }}%)</dd>
+      </dl>
+      {%- else %}
+
+      {%- endif %}
+    </div>
+  </div>
+
   <h4>Harvested Datasets</h4>
   <div class="col-lg-12 row">
     <ul>
